--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,12 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        visit:
+          attributes:
+            end_date:
+              after_or_equal_to: must be same or after start day
+            start_date:
+              after: "must be tomorrow or after"
